--- a/data/dataGather.ipynb
+++ b/data/dataGather.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
     "\n",
     "    fin = fin.dropna(how = 'any')\n",
     "    n_obs, _ = fin.shape\n",
-    "    report['NaN_found'] = i_obs - n_obs\n",
+    "    report['NaN_found'] = d_obs - n_obs\n",
     "\n",
     "    report['number_of_instances'] = n_obs\n",
     "\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -231,16 +231,16 @@
      "output_type": "stream",
      "text": [
       "Report of metal:\n",
-      "\t {'duplicate_found': 4, 'NaN_found': 4, 'number_of_instances': 406, 'labeled': True}\n",
+      "\t {'duplicate_found': 4, 'NaN_found': 0, 'number_of_instances': 406, 'labeled': True}\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Report of jazz:\n",
-      "\t {'duplicate_found': 18, 'NaN_found': 18, 'number_of_instances': 382, 'labeled': True}\n",
+      "\t {'duplicate_found': 18, 'NaN_found': 0, 'number_of_instances': 382, 'labeled': True}\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Report of classic:\n",
-      "\t {'duplicate_found': 4, 'NaN_found': 4, 'number_of_instances': 244, 'labeled': True}\n",
+      "\t {'duplicate_found': 4, 'NaN_found': 0, 'number_of_instances': 244, 'labeled': True}\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Report of rap:\n",
-      "\t {'duplicate_found': 5, 'NaN_found': 5, 'number_of_instances': 350, 'labeled': True}\n",
+      "\t {'duplicate_found': 5, 'NaN_found': 0, 'number_of_instances': 350, 'labeled': True}\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
