final frame ready(ish)

--- a/data/dataGather.ipynb
+++ b/data/dataGather.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,11 @@
     "\n",
     "# If flag set to false then csvs are loaded from cvs_dir_name searching for csvs with name \"genre.csv\" where the genres are specified in the cell below§\n",
     "grab_from_api = False\n",
-    "csv_dir_name = 'csvs' "
+    "csv_dir_name = 'csvs' \n",
+    "\n",
+    "# IF true after cleaning the dataset combine all the frames into a single one and save them into all_clean_path\n",
+    "save_all_clean = True\n",
+    "all_clean_path = 'dataframeV1.csv'"
    ]
   },
   {
@@ -73,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,35 +213,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
     "report = {}\n",
     "\n",
-    "metal_df, report['metal'] = cleanFrame(dF_dict['metal'], genre='metal')\n",
-    "jazz_df, report['jazz']= cleanFrame(dF_dict['jazz'], genre='jazz')\n",
-    "classic_df, report['classic'] = cleanFrame(dF_dict['classic'], genre='classic')\n",
-    "rap_df, report['rap'] = cleanFrame(dF_dict['rap'], genre='rap')"
+    "\n",
+    "for gen in genres : \n",
+    "    dF_dict[gen], report[gen] = cleanFrame(dF_dict[gen], genre=gen)\n",
+    "\n",
+    "if save_all_clean :\n",
+    "    merged = pd.concat([dF_dict[x] for x in genres])\n",
+    "    merged.to_csv(all_clean_path)\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Report of metal:\n",
-      "\t {'duplicate_found': 4, 'NaN_found': 0, 'number_of_instances': 406, 'labeled': True}\n",
+      "Report of classic:\n",
+      "\t {'duplicate_found': 4, 'NaN_found': 0, 'number_of_instances': 244, 'labeled': True}\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Report of jazz:\n",
       "\t {'duplicate_found': 18, 'NaN_found': 0, 'number_of_instances': 382, 'labeled': True}\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "Report of classic:\n",
-      "\t {'duplicate_found': 4, 'NaN_found': 0, 'number_of_instances': 244, 'labeled': True}\n",
+      "Report of metal:\n",
+      "\t {'duplicate_found': 4, 'NaN_found': 0, 'number_of_instances': 406, 'labeled': True}\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Report of rap:\n",
       "\t {'duplicate_found': 5, 'NaN_found': 0, 'number_of_instances': 350, 'labeled': True}\n",
