--- a/data/dataGather.ipynb
+++ b/data/dataGather.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,10 @@
     "\n",
     "# IF true after cleaning the dataset combine all the frames into a single one and save them into all_clean_path\n",
     "save_all_clean = True\n",
-    "all_clean_path = 'dataframeV1.csv'"
+    "all_clean_path = 'dataframeV1.csv'\n",
+    "\n",
+    "# Save in separate files after cleaning, usefull for the first analysys part\n",
+    "save_separate = True"
    ]
   },
   {
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,6 +225,8 @@
     "\n",
     "for gen in genres : \n",
     "    dF_dict[gen], report[gen] = cleanFrame(dF_dict[gen], genre=gen)\n",
+    "    if save_separate : \n",
+    "        dF_dict[gen].to_csv(gen + '_cleaned.csv')\n",
     "\n",
     "if save_all_clean :\n",
     "    merged = pd.concat([dF_dict[x] for x in genres])\n",
@@ -232,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
