--- a/decisionTree.ipynb
+++ b/decisionTree.ipynb
@@ -1,18 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np \n",
-    "import pandas as pd"
+    "# Decision Tree Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is just a showcase of the workings of our decision tree over our dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +180,7 @@
        "4  classic  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +346,7 @@
        "4  0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,26 +360,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from DecisionTree.tree import Tree\n"
+    "from DecisionTree.tree import Tree\n",
+    "\n",
+    "dT = Tree()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = Tree()"
+    "# Prepare the dataset for the decision tree\n",
+    "y = dF.Y \n",
+    "X = dF.drop([\"Y\"], axis=1)\n",
+    "\n",
+    "# Split in train and validation\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, random_state=43, train_size=.75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit the tree on the train set \n",
+    "#TODO: Sometimes during the fit it tries to argmax over an empty sequence ... need to figure out why\n",
+    "dT.fit(x_train.to_numpy(), y_train.to_numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build the prediction over the validation set\n",
+    "preds = dT.predict(x_test.to_numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8988439306358381"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the overall accuracy.\n",
+    "sum(preds == y_test) / len(preds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that we get close to 90% accuracy. We suspect this might be due to overfitting or maybe our problem is simple enough\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -378,12 +449,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0f2db4cae5415ebadbac9cd1102aca7b871dbd5f50dbd86f4ca251b4061ba500"
+    "hash": "949ca02c6f6c8e46594f49d827909bb6cc1f655ba57a65a49f724deda5e66916"
    }
   }
  },
