--- a/decisionTree.ipynb
+++ b/decisionTree.ipynb
@@ -390,7 +390,6 @@
    "outputs": [],
    "source": [
     "# Fit the tree on the train set \n",
-    "#TODO: Sometimes during the fit it tries to argmax over an empty sequence ... need to figure out why\n",
     "dT.fit(x_train.to_numpy(), y_train.to_numpy())"
    ]
   },
@@ -429,8 +428,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that we get close to 90% accuracy. We suspect this might be due to overfitting or maybe our problem is simple enough\n"
+    "# random forest\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
