--- a/mog.ipynb
+++ b/mog.ipynb
@@ -66,8 +66,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So to the question on how to estimate the parameters, trying to estimate the parameters is NP given that the Log-likelihood is not jointly concave w.r.t- the mixture parameters. \\\\ \n",
-    "Luckily we can use the Expectation Maximization Algorithm for finding the maximum likelihood estimates of a mixture (of gaussians in our case) model. As the name suggest the algorithm is divided in two steps. \n"
+    "So to the question on how to estimate the parameters, trying to estimate the parameters is NP given that the Log-likelihood is not jointly concave w.r.t- the mixture parameters. \n",
+    " \n",
+    "Luckily we can use the Expectation Maximization Algorithm for finding the maximum likelihood estimates of a mixture (of gaussians in our case) model. As the name suggest the algorithm is divided in two steps. \n",
+    "\n"
    ]
   },
   {
@@ -98,7 +100,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate the membership weights for each datapoint $x_i$,  $1 \\le i \\le N$ and all mixture components $1 \\le k \\le K$. This will yield a N x K matrix."
+    "Calculate the membership weights $w_{i,k}$ for each datapoint $x_i$,  $1 \\le i \\le N$ and all mixture components $1 \\le k \\le K$. This will yield a $N \\times K$ matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### M-step"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let** $N_k = \\sum_{i=1}^{N} w_{i,k}\\;$ i.e. the effective number of datapoints assigned to component K.\n",
+    "\n",
+    "We now update $\\Theta$ as follows : \n",
+    "$$\n",
+    "\\pi_k^{new} = \\frac{N_k}{N} \\;\\; 1 \\le k \\le K\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mu_k^{new} = (\\frac{1}{N_k}) \\sum_{i=1}^{N} w_{i,k}  x_i \\;\\; 1 \\le k \\le K\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\Sigma_k^{new} = (\\frac{1}{N_k}) \\sum_{i=1}^{N} w_{i,k} (x_i - \\mu_k^{new})(x_i - \\mu_k^{new})^T \\;\\; 1 \\le k \\le K\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convergence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The algorithm takes an iterative approach where in each iteration the M-step is ran after the E-step. But how do we decide when to stop the iterations ? \n",
+    "\n",
+    "One approach is to limit the amount of iterations a priori. A better approach is to calculate at each iteration the value of the log likelihood $\\log l(\\Theta) = \\sum_i^N \\log p(x_i|\\Theta)$ and stop the algorithm when no appreaciable improvment is gained w.r.t to the previous iteration. \n",
+    "\n",
+    "Note that EM does not guarantee to converge neither to a global or local minima. "
    ]
   },
   {
