--- a/data/dataGather.ipynb
+++ b/data/dataGather.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +305,196 @@
     "\n",
     "dF.insert(16,'popularity',np.array(list(map(addPop,dF.iloc[:,11]))))\n",
     "dF.to_csv('.\\csvs\\dataframeV2.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>id</th>\n",
+       "      <th>uri</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>label</th>\n",
+       "      <th>popularity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.2750</td>\n",
+       "      <td>0.1570</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-18.752</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0636</td>\n",
+       "      <td>0.890</td>\n",
+       "      <td>0.842</td>\n",
+       "      <td>0.186</td>\n",
+       "      <td>0.3040</td>\n",
+       "      <td>73.289</td>\n",
+       "      <td>17i5jLpzndlQhbS4SrTd0B</td>\n",
+       "      <td>spotify:track:17i5jLpzndlQhbS4SrTd0B</td>\n",
+       "      <td>152280</td>\n",
+       "      <td>4</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.2210</td>\n",
+       "      <td>0.1260</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-25.427</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0447</td>\n",
+       "      <td>0.989</td>\n",
+       "      <td>0.897</td>\n",
+       "      <td>0.102</td>\n",
+       "      <td>0.2160</td>\n",
+       "      <td>133.630</td>\n",
+       "      <td>4SFBV7SRNG2e2kyL1F6kjU</td>\n",
+       "      <td>spotify:track:4SFBV7SRNG2e2kyL1F6kjU</td>\n",
+       "      <td>139307</td>\n",
+       "      <td>4</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.2890</td>\n",
+       "      <td>0.0306</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-30.790</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0446</td>\n",
+       "      <td>0.987</td>\n",
+       "      <td>0.911</td>\n",
+       "      <td>0.102</td>\n",
+       "      <td>0.1180</td>\n",
+       "      <td>125.610</td>\n",
+       "      <td>3zLTPuucd3e6TxZnu2dlVS</td>\n",
+       "      <td>spotify:track:3zLTPuucd3e6TxZnu2dlVS</td>\n",
+       "      <td>212067</td>\n",
+       "      <td>3</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0753</td>\n",
+       "      <td>0.0700</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-27.272</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0440</td>\n",
+       "      <td>0.918</td>\n",
+       "      <td>0.947</td>\n",
+       "      <td>0.146</td>\n",
+       "      <td>0.0625</td>\n",
+       "      <td>79.801</td>\n",
+       "      <td>7h6GoPvGHC9uzZJ8bNvfIq</td>\n",
+       "      <td>spotify:track:7h6GoPvGHC9uzZJ8bNvfIq</td>\n",
+       "      <td>365147</td>\n",
+       "      <td>4</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.1300</td>\n",
+       "      <td>0.1580</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-16.132</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0350</td>\n",
+       "      <td>0.748</td>\n",
+       "      <td>0.924</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>0.0998</td>\n",
+       "      <td>85.031</td>\n",
+       "      <td>5x3TUfYzgZIdt0Kaop64ss</td>\n",
+       "      <td>spotify:track:5x3TUfYzgZIdt0Kaop64ss</td>\n",
+       "      <td>302093</td>\n",
+       "      <td>4</td>\n",
+       "      <td>classic</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
+       "0        0.2750  0.1570    7   -18.752     1       0.0636         0.890   \n",
+       "1        0.2210  0.1260    0   -25.427     1       0.0447         0.989   \n",
+       "2        0.2890  0.0306    9   -30.790     0       0.0446         0.987   \n",
+       "3        0.0753  0.0700    2   -27.272     1       0.0440         0.918   \n",
+       "4        0.1300  0.1580    2   -16.132     1       0.0350         0.748   \n",
+       "\n",
+       "   instrumentalness  liveness  valence    tempo                      id  \\\n",
+       "0             0.842     0.186   0.3040   73.289  17i5jLpzndlQhbS4SrTd0B   \n",
+       "1             0.897     0.102   0.2160  133.630  4SFBV7SRNG2e2kyL1F6kjU   \n",
+       "2             0.911     0.102   0.1180  125.610  3zLTPuucd3e6TxZnu2dlVS   \n",
+       "3             0.947     0.146   0.0625   79.801  7h6GoPvGHC9uzZJ8bNvfIq   \n",
+       "4             0.924     0.100   0.0998   85.031  5x3TUfYzgZIdt0Kaop64ss   \n",
+       "\n",
+       "                                    uri  duration_ms  time_signature    label  \\\n",
+       "0  spotify:track:17i5jLpzndlQhbS4SrTd0B       152280               4  classic   \n",
+       "1  spotify:track:4SFBV7SRNG2e2kyL1F6kjU       139307               4  classic   \n",
+       "2  spotify:track:3zLTPuucd3e6TxZnu2dlVS       212067               3  classic   \n",
+       "3  spotify:track:7h6GoPvGHC9uzZJ8bNvfIq       365147               4  classic   \n",
+       "4  spotify:track:5x3TUfYzgZIdt0Kaop64ss       302093               4  classic   \n",
+       "\n",
+       "   popularity  \n",
+       "0          67  \n",
+       "1          60  \n",
+       "2          60  \n",
+       "3          56  \n",
+       "4           0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dF = pd.read_csv('.\\csvs\\dataframeV2.csv', index_col=0)\n",
+    "dF.head()"
    ]
   }
  ],
