--- a/data/dataGather.ipynb
+++ b/data/dataGather.ipynb
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\devin\\anaconda3\\lib\\site-packages\\_distutils_hack\\__init__.py:30: UserWarning: Setuptools is replacing distutils.\n",
+      "c:\\Users\\User\\anaconda3\\lib\\site-packages\\_distutils_hack\\__init__.py:30: UserWarning: Setuptools is replacing distutils.\n",
       "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
      ]
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,17 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dF = pd.read_csv('.\\csvs\\dataframeV1.csv', index_col=0)\n",
+    "dF = pd.read_csv('.\\csvs\\Top50_clean.csv', index_col=0)\n",
     "\n",
     "def addPop(id):\n",
     "    return spotyCarlo.track(id)['popularity']\n",
     "\n",
-    "dF.insert(16,'popularity',np.array(list(map(addPop,dF.iloc[:,11]))))\n",
-    "dF.to_csv('.\\csvs\\dataframeV2.csv')\n"
+    "dF.insert(15,'popularity',np.array(list(map(addPop,dF.iloc[:,11]))))\n",
+    "dF.to_csv('.\\csvs\\Top50_clean.csv')\n"
    ]
   },
   {
@@ -500,7 +500,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -514,12 +514,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "379ef13cdaaa3488d0d0ee4a3d00b9f61dd7f8c251b8a40c38fb20881b24658a"
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
    }
   }
  },
